examples/test/testpolicy4225.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4225
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key12: value28
      key1: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value47
      podSelector:
        matchLabels:
          key19: value20
          key20: value5
          key34: value28
